<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">LOST Sample</string>
  <string name="settings">Settings</string>
  <string name="reset">Reset</string>
  <string name="last_known_location">Last Known Location</string>
  <string name="location_updates">Location Updates</string>

  <string name="background_update_key">background_update_key</string>
  <string name="background_update_title">Background Updates</string>
  <string name="background_update_summary">Enable background location updates</string>

  <string name="interval_key">interval_key</string>
  <string name="interval_title">Interval (ms)</string>

  <string name="displacement_key">displacement_key</string>
  <string name="displacement_title">Smallest Displacement (m)</string>

  <string name="priority_key">priority_key</string>
  <string name="priority_title">Priority</string>

  <string name="mock_mode_key">mock_mode_key</string>
  <string name="mock_mode_title">Mock Mode</string>
  <string name="mock_mode_summary">Enable mock locations</string>

  <string name="mock_lat_key">mock_lat_key</string>
  <string name="mock_lat_title">Mock Latitude</string>

  <string name="mock_lng_key">mock_lng_key</string>
  <string name="mock_lng_title">Mock Longitude</string>

  <string name="mock_accuracy_key">mock_accuracy_key</string>
  <string name="mock_accuracy_title">Mock Accuracy</string>

  <string name="mock_mode_gpx_key">mock_gpx_key</string>
  <string name="mock_mode_gpx_title">GPX Trace Mode</string>
  <string name="mock_mode_gpx_summary">Replay mock GPX trace from file</string>

  <string name="mock_gpx_file_key">mock_gpx_file_key</string>
  <string name="mock_gpx_file_title">GPX Filename</string>

  <string name="sample_fused_location_api_title">FusedLocationApi</string>
  <string name="sample_fused_location_api_description">Demonstrates how to request location updates using the FusedLocationApi</string>
  <string name="sample_geofencing_api_title">GeofencingApi</string>
  <string name="sample_geofencing_api_description">Demonstrates how use proximity alerts with the GeofencingApi</string>
  <string name="sample_settings_api_title">SettingsApi</string>
  <string name="sample_settings_api_description">Demonstrates how to use the SettingsApi to request network status and resolve issues with the current status when it isn\'t enabled</string>
  <string name="gps_present">Gps present:</string>
  <string name="gps_usable">Gps usable:</string>
  <string name="network_present">Network present:</string>
  <string name="network_usable">Network usable:</string>
  <string name="location_present">Location present:</string>
  <string name="location_usable">Location usable:</string>
  <string name="ble_present">Ble present:</string>
  <string name="ble_usable">Ble usable:</string>
  <string name="check_location_settings">Check location settings</string>
  <string name="resolve_location_settings">Resolve location settings</string>
  <string name="cancel">Cancel</string>
  <string name="connect">Connect</string>
  <string name="disconnect">Disconnect</string>
  <string name="request_id">requestId</string>
  <string name="latitude">latitude</string>
  <string name="longitude">longitude</string>
  <string name="radius">radius</string>
  <string name="create">Create</string>
  <string name="sample_location_listener_title">LocationListener</string>
  <string name="sample_location_listener_description">Demonstrates how to use a LocationListener to receive location updates</string>
  <string name="request_updates">Request Updates</string>
  <string name="pending_intent">Pending Intent</string>
  <string name="sample_pending_intent_title">PendingIntent</string>
  <string name="sample_pending_intent_description">Demonstrates how to use a PendingIntent to receive location updates</string>
  <string name="requested">Requested</string>
  <string name="sample_location_availability_title">Location Availability</string>
  <string name="sample_location_availability_description">Demonstrates how to determine if location requested is available</string>
  <string name="check_availability">Check Availability</string>
  <string name="location_available">Location Available</string>
  <string name="location_unavailable">Location NOT Available</string>
  <string name="sample_multiple_clients_diff_intervals_title">Multiple Clients w/different Intervals</string>
  <string name="sample_multiple_clients_diff_intervals_description">Demonstrates how multiple clients can request location updates at different fastest intervals</string>
  <string name="sample_single_client_diff_intervals_title">Single Client w/different Intervals</string>
  <string name="sample_single_client_diff_intervals_description">Demonstrates how a single client can request location updates at different fastest intervals</string>
  <string name="sample_multiple_clients_priorities_title">Multiple Clients w/different request priorities</string>
  <string name="sample_multiple_clients_priorities_description">Demonstrates multiple clients receiving location requests for different location priorities</string>
  <string name="sample_multiple_process_title">Multiple processes w/different clients</string>
  <string name="sample_multiple_process_description">Demonstrates using lost in the main app process as well as in a service running in its own process</string>

</resources>
